# nullspace

./: .gitignore  AGENTS.md  Cargo.toml  DEDUP_PLAN.md  FIX_PLAN.md  Makefile  PLAN.md  README.md  ai-complete.md  dft-diagmc.json  equations.json  plan-cmdline.md  plan-history.md  plan-references-editor.md  plan-tags.md  plan-vertical-view.md  schema.json
crates/equivault-core/: Cargo.toml
crates/equivault-core/src/: lib.rs
crates/equivault-core/src/store/: migrations.rs
crates/equivault-tui/: Cargo.toml
crates/equivault-tui/src/: action.rs  app.rs  event.rs  main.rs  render_worker.rs
crates/equivault-tui/src/ui/: browser.rs  editor.rs  widgets.rs
crates/nullspace-core/: Cargo.toml
crates/nullspace-core/src/: error.rs  identity.rs  lib.rs  model.rs  reference.rs
crates/nullspace-core/src/render/: mod.rs  ratex.rs  stub.rs  unicode.rs
crates/nullspace-core/src/store/: migrations.rs  mod.rs
crates/nullspace-tui/: Cargo.toml
crates/nullspace-tui/src/: action.rs  app.rs  clipboard.rs  event.rs  graphics.rs  main.rs  protocol_warm_worker.rs  render_cache.rs  render_queue.rs  render_worker.rs  tui.rs  warm_worker.rs
crates/nullspace-tui/src/app/: actions.rs  cmdline.rs  editor.rs  mod.rs  render.rs  scan.rs  state.rs  tests.rs  text.rs
crates/nullspace-tui/src/ui/: browser.rs  editor.rs  mod.rs  widgets.rs
demo/: demo.md  nullspace-demo.sqlite3  solid-state-physics.json
