[package]
name = "nullspace-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
ratex-svg = { version = "0.1.11", features = ["embed-fonts"] }
ratex-parser = "0.1.11"
ratex-layout = "0.1.11"
ratex-types = "0.1.11"
resvg = "0.47"
