[package]
name = "nullspace-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "nullspace"
path = "src/main.rs"

[dependencies]
nullspace-core = { path = "../nullspace-core" }
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
tui-textarea = { package = "tui-textarea-2", version = "0.11", features = ["crossterm"] }
directories = "5"
anyhow = "1"
image = "0.25"
arboard = { version = "3", features = ["wayland-data-control"] }
libc = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = "1.2.1"
rayon = "1"
base64 = "0.22"
